# claude-squad

./: .gitignore  .session-notes  CLAUDE.md  Cargo.toml  README.md  auto-rotate-hook.sh  bench-results-100pt-mm.json  bench-results-50pt.json  bench-results-governance-mm.json  bench-results-governance.json  bench-results-mm-opus.json  cc  ccc  csq  install.sh  rotate.md  rotation-engine.py  rust-toolchain.toml  statusline-quota.sh  test-broker-concurrent.py  test-broker-recovery.py  test-coc-bench.py  test-platform.sh
.claude/: VERSION  settings.json
csq-cli/: Cargo.toml
csq-cli/src/: main.rs
csq-cli/src/commands/: daemon.rs  doctor.rs  install.rs  listkeys.rs  login.rs  mod.rs  models.rs  rmkey.rs  run.rs  setkey.rs  status.rs  statusline.rs  suggest.rs  swap.rs  update.rs
csq-core/: Cargo.toml
csq-desktop/: index.html  package-lock.json  package.json
journal/: 0007-DISCOVERY-cc-credential-reload-mechanism.md  0010-DECISION-remove-auto-rotate.md  0011-DISCOVERY-stuck-access-tokens.md  0012-DECISION-no-powershell-port.md  0013-DISCOVERY-windows-ctypes-handle-truncation.md  0014-GAP-swap-does-not-force-cc-reload.md  0015-DECISION-strip-kailash-co-artifacts.md  0016-DISCOVERY-cc-credential-reload-mechanism.md  0017-DISCOVERY-backsync-marker-fallback-for-rotated-refresh-tokens.md  0020-DECISION-multi-provider-ollama-3p-primers.md  0021-DISCOVERY-cc-keychain-fallback-chain.md
specs/: 00-manifest.md  01-cc-credential-architecture.md  02-csq-handle-dir-model.md  03-csq-session-lifecycle.md  04-csq-daemon-architecture.md  05-quota-polling-contracts.md  _index.md  (+1 more)
(+199 files in other folders)
